@@ -2,98 +2,108 @@ package de.dlr.shepard.data.spatialdata.repositories;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import de.dlr.shepard.data.spatialdata.io.FilterCondition;
-import jakarta.ws.rs.BadRequestException;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 public class NativeQueryStringBuilder {
 
-  private StringBuilder query = new StringBuilder();
-  private boolean whereClauseAdded = false;
+  private String selectString = "";
+
+  private StringBuilder whereConditions = new StringBuilder();
+
+  private String timeCondition = "";
+
+  private StringBuilder jsonConditions = new StringBuilder();
+
+  private StringBuilder measurementsFilterConditions = new StringBuilder();
+
+  private String geometryFilterCondition = "";
+  private Map<String, Object> geometryFilterParameters = new HashMap<>();
+
+  private String limitClause = "";
+
+  private String skipClause = "";
+
+  public Map<String, Object> getGeometryFilterParameters() {
+    return geometryFilterParameters;
+  }
 
   public NativeQueryStringBuilder select(String tableName, String[] columns) {
-    query.append("SELECT %s FROM %s".formatted(String.join(", ", columns), tableName));
+    selectString = String.format("SELECT %s FROM %s".formatted(String.join(", ", columns), tableName));
     return this;
   }
 
   public NativeQueryStringBuilder addWhereCondition(String parameterName, Object value) {
     if (value == null) return this;
-    addWhereClauseIfNecessary();
     if (value.getClass() == String.class) {
-      query.append(String.format(" AND %s = '%s'", parameterName, value));
+      whereConditions.append(String.format(" AND %s = '%s'", parameterName, value));
     } else {
-      query.append(String.format(" AND %s = %s", parameterName, value));
+      whereConditions.append(String.format(" AND %s = %s", parameterName, value));
     }
     return this;
   }
 
   public NativeQueryStringBuilder addTimeCondition(String parameterName, Long timestampStart, Long timestampEnd) {
     if (timestampStart == null && timestampEnd == null) return this;
-    addWhereClauseIfNecessary();
+    var timeQuery = new StringBuilder();
     if (timestampStart != null) {
-      query.append(String.format(" AND %s > %s", parameterName, timestampStart));
+      timeQuery.append(String.format(" AND %s > %s", parameterName, timestampStart));
     }
     if (timestampEnd != null) {
-      query.append(String.format(" AND %s < %s", parameterName, timestampEnd));
+      timeQuery.append(String.format(" AND %s < %s", parameterName, timestampEnd));
     }
+    timeCondition = timeQuery.toString();
     return this;
   }
 
   public NativeQueryStringBuilder addJsonContainsCondition(String parameterName, Map<String, Object> filter) {
     if (filter.isEmpty()) return this;
-    addWhereClauseIfNecessary();
-
     try {
       var mapper = new ObjectMapper();
       var filterAsString = mapper.writeValueAsString(filter);
-      query.append(String.format(" AND %s @> '%s'", parameterName, filterAsString));
+      jsonConditions.append(String.format(" AND %s @> '%s'", parameterName, filterAsString));
     } catch (Exception e) {
       throw new RuntimeException(e);
     }
     return this;
   }
 
-  public NativeQueryStringBuilder addLimitClause(Integer limit) {
-    if (limit == null) return this;
-    addWhereClauseIfNecessary();
-    query.append(String.format(" LIMIT %d", limit));
+  public NativeQueryStringBuilder addKNNGeometryCondition(double x1, double y1, double z1, int k) {
+    geometryFilterCondition = " ORDER BY position <<->> ST_MakePoint(:x1, :y1, :z1) LIMIT :k";
+    geometryFilterParameters.put("x1", x1);
+    geometryFilterParameters.put("y1", y1);
+    geometryFilterParameters.put("z1", z1);
+    geometryFilterParameters.put("k", k);
     return this;
   }
 
-  public NativeQueryStringBuilder addKNNGeometryCondition() {
-    addWhereClauseIfNecessary();
-    query.append(" ORDER BY position <<->> ST_MakePoint(:x1, :y1, :z1) LIMIT :k");
+  public NativeQueryStringBuilder addAABBGeometryCondition(
+    double x1,
+    double y1,
+    double z1,
+    double x2,
+    double y2,
+    double z2
+  ) {
+    geometryFilterCondition =
+      " AND position &&& ST_3DMakeBox(ST_MakePoint(:x1, :y1, :z1), ST_MakePoint(:x2, :y2, :z2))";
+    geometryFilterParameters.put("x1", x1);
+    geometryFilterParameters.put("y1", y1);
+    geometryFilterParameters.put("z1", z1);
+    geometryFilterParameters.put("x2", x2);
+    geometryFilterParameters.put("y2", y2);
+    geometryFilterParameters.put("z2", z2);
     return this;
   }
 
-  public NativeQueryStringBuilder addAABBGeometryCondition() {
-    addWhereClauseIfNecessary();
-    query.append(" AND position &&& ST_3DMakeBox(ST_MakePoint(:x1, :y1, :z1), ST_MakePoint(:x2, :y2, :z2))");
+  public NativeQueryStringBuilder addBSGeometryCondition(double x1, double y1, double z1, double radius) {
+    geometryFilterCondition = " AND ST_3DDWithin(position, ST_MakePoint(:x1, :y1, :z1), :radius)";
+    geometryFilterParameters.put("x1", x1);
+    geometryFilterParameters.put("y1", y1);
+    geometryFilterParameters.put("z1", z1);
+    geometryFilterParameters.put("radius", radius);
     return this;
-  }
-
-  public NativeQueryStringBuilder addBSGeometryCondition() {
-    addWhereClauseIfNecessary();
-    query.append(" AND ST_3DDWithin(position, ST_MakePoint(:x1, :y1, :z1), :radius)");
-    return this;
-  }
-
-  public NativeQueryStringBuilder addSkipClause(Integer skip) {
-    if (skip == null) return this;
-    if (skip <= 0) throw new BadRequestException("Skip parameter must be greater than 0");
-    addWhereClauseIfNecessary();
-    query.append(String.format(" AND id %% %d = 0", skip));
-    return this;
-  }
-
-  public String build() {
-    return query.append(";").toString();
-  }
-
-  private void addWhereClauseIfNecessary() {
-    if (whereClauseAdded) return;
-    query.append(" WHERE 1 = 1");
-    whereClauseAdded = true;
   }
 
   public NativeQueryStringBuilder addJsonFilterConditions(
@@ -101,9 +111,8 @@ public class NativeQueryStringBuilder {
     List<FilterCondition> measurementsFilter
   ) {
     if (measurementsFilter.isEmpty()) return this;
-    addWhereClauseIfNecessary();
     measurementsFilter.forEach(filterCondition ->
-      query.append(
+      measurementsFilterConditions.append(
         String.format(
           " AND jsonb_typeof(%s #> '{%s}') = 'number' AND (%s #>> '{%s}')::NUMERIC %s %s",
           parameterName,
@@ -116,5 +125,34 @@ public class NativeQueryStringBuilder {
       )
     );
     return this;
+  }
+
+  public NativeQueryStringBuilder addLimitClause(Integer limit) {
+    if (limit == null) return this;
+    limitClause = String.format(" LIMIT %d", limit);
+    return this;
+  }
+
+  public NativeQueryStringBuilder addSkipClause(Integer skip) {
+    if (skip == null) return this;
+    skipClause = String.format(" AND id %% %d = 0", skip);
+    return this;
+  }
+
+  public String build() {
+    var res = String.join(
+      "",
+      selectString,
+      " WHERE 1 = 1",
+      whereConditions.toString(),
+      timeCondition,
+      jsonConditions.toString(),
+      measurementsFilterConditions.toString(),
+      geometryFilterCondition,
+      skipClause,
+      limitClause,
+      ";"
+    );
+    return res;
   }
 }
